--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,22 @@ jobs:
         with:
           configFile: .commitlintrc.json
 
+  dependency-review:
+    name: Dependency Review
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    if: github.event_name == 'pull_request'
+
+    steps:
+      - uses: actions/checkout@v6
+
+      - uses: actions/dependency-review-action@v4
+        with:
+          # Block PRs that introduce new HIGH or CRITICAL vulnerabilities.
+          fail-on-severity: high
+          # Block new dependencies with licenses incompatible with Fair Source.
+          deny-licenses: GPL-2.0, GPL-3.0, AGPL-1.0, AGPL-3.0, SSPL-1.0, EUPL-1.1, EUPL-1.2
+
   quality:
     name: Code Quality
     runs-on: ubuntu-latest
@@ -56,7 +72,10 @@ jobs:
           DATABASE_URL: postgresql://dummy:dummy@localhost/dummy
 
       - name: Security audit
-        run: pnpm audit --audit-level moderate || echo "::warning::pnpm audit found vulnerabilities — review output above"
+        # Fail CI on HIGH or CRITICAL vulnerabilities.
+        # MODERATE/LOW are visible in the output but do not block merging —
+        # they are usually transitive dependencies with no upstream fix yet.
+        run: pnpm audit --audit-level high
 
       - name: License compliance check
         run: |
