--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
       "lodash@>=4.0.0 <=4.17.22": ">=4.17.23",
       "hono@<4.11.7": ">=4.11.7",
       "tar@<7.5.7": ">=7.5.7",
-      "@types/node": "^25.2.2"
+      "@types/node": "^25.2.2",
+      "ajv@>=8.0.0 <8.18.0": "8.18.0",
+      "minimatch": "10.2.1"
     }
   }
 }
