chore(deps): bump rollup override to >=4.59.0 (GHSA-mw96-cpmx-2vgc)
rollup is a transitive dependency via vite in apps/web.
CVE: GHSA-mw96-cpmx-2vgc — Arbitrary File Write via Path Traversal.
Affected: >=4.0.0 <4.59.0. Fixed in >=4.59.0.

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "overrides": {
       "lodash@>=4.0.0 <=4.17.22": ">=4.17.23",
       "hono@<4.12.2": ">=4.12.2",
+      "rollup@>=4.0.0 <4.59.0": ">=4.59.0",
       "tar@<7.5.7": ">=7.5.7",
       "@types/node": "^25.2.2",
       "ajv@>=8.0.0 <8.18.0": "8.18.0",
