--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
       "tar@<7.5.7": ">=7.5.7",
       "@types/node": "^25.2.2",
       "ajv@>=8.0.0 <8.18.0": "8.18.0",
-      "minimatch": "10.2.1"
+      "minimatch": ">=10.2.3"
     },
     "onlyBuiltDependencies": [
       "@nestjs/core",
